--- a/thesis/evaluation.tex
+++ b/thesis/evaluation.tex
@@ -1,52 +1,3 @@
-\chapter{Evaluation}
+\chapter{Discussion}
 
 
-
-  
-% \begin{itemize}
-%     \item Named Entities
-%     \begin{itemize}
-%     \item AQL contains more named entities than the other query logs. (Due to the overall bigger size?)
-%     \item Zipf's law is followed pretty well by all query logs.
-%     \item AQL shows a small deviation from Zipf's law at the most frequent entities (What is the reason? Entities of a specific domain?).
-%     \end{itemize}
-%     \item words
-%     \begin{itemize}
-%         \item AQL contains more words than the other query logs. (Due to the overall bigger size?)
-%         \item Zipf's law is followed reasonably well by the query logs.
-%         \item Again, we observe small deviations from Zipf's law by the AQL log's graph.
-%     \end{itemize}
-% \end{itemize}
-
-
-% \begin{itemize}
-%     \item Queries
-%     \begin{itemize}
-%         \item Zipf's law is followed well by the query logs.
-%         \item AQL contains more queries than the other query logs. (Due to the overall bigger size?)
-%         \item AQL shows a small deviation from Zipf's law at the most frequent queries (What is the reason?).
-%     \end{itemize}
-%     \item Characters
-%     \begin{itemize}
-%         \item Zipf's law is not followed by any of the query logs.
-%         \item The most frequent characters are significantly more frequent than the other characters.
-%         \item AQL and MS-MARCO contain more characters than AOL and ORCAS. (Due to more involved languages?)
-%         \item Some sudden drops in frequency are striking in the AQL log's and the MS-MARCO log's graph. (What is the reason? -> Maybe the general frequency of languages and therefore the frequency of characters belonging to that language?)
-%     \end{itemize}
-% \end{itemize}
-
-
-
-% \begin{figure}
-%     \centering
-%     \import{../plots/aql-character-count-frequencies-words-2006}{aql.pgf}
-%     \caption{Lorem ipsum dolor sit amet, consectetuer adipisc-
-%     ing elit. Etiam lobortis facilisis sem.}
-% \end{figure} 
-
-% \begin{figure}
-%     \centering
-%     \import{../plots/aql-character-count-frequencies-words-old-years}{aql.pgf}
-%     \caption{Lorem ipsum dolor sit amet, consectetuer adipisc-
-%     ing elit. Etiam lobortis facilisis sem.}
-% \end{figure} 
