--- a/thesis/literature.bib
+++ b/thesis/literature.bib
@@ -68,41 +68,12 @@
 
 @article{piantadosi:2014,
   author={Steven T. Piantadosi},
-  title={Zipf’s Word Frequency Law in Natural Language: A critical Review and Future Directions},
+  title={{Z}ipf’s {W}ord {F}requency {L}aw in {N}atural {L}anguage: {A} critical {R}eview and {F}uture {D}irections},
   journal={Psychonomic Bulletin \& Review},
   volume={21},
   pages={1112--1130},
   year={2014},
   publisher={Springer}
-}
-%%% Finally, you will probably most often cite some conference papers; make sure to rather not fetch the cross-referenced BibTex entries from DBLP
-%%% Suggested change to the standard BibTeX entry: endash (--) for the date range of a conference (like in the pages field)
-@inproceedings{zuccon:2016,
-  author    = {Guido Zuccon and
-               Jo{\~{a}}o R. M. Palotti and
-               Allan Hanbury},
-  editor    = {Snehasis Mukhopadhyay and
-               ChengXiang Zhai and
-               Elisa Bertino and
-               Fabio Crestani and
-               Javed Mostafa and
-               Jie Tang and
-               Luo Si and
-               Xiaofang Zhou and
-               Yi Chang and
-               Yunyao Li and
-               Parikshit Sondhi},
-  title     = {Query Variations and their Effect on Comparing Information Retrieval
-               Systems},
-  booktitle = {Proceedings of the 25th {ACM} International Conference on Information
-               and Knowledge Management, {CIKM} 2016, Indianapolis, IN, USA, October
-               24--28, 2016},
-  pages     = {691--700},
-  publisher = {{ACM}},
-  year      = {2016},
-  url       = {https://doi.org/10.1145/2983323.2983723}  ,
-  doi       = {10.1145/2983323.2983723}
-
 }
 
 @inproceedings{reimer:2023,
@@ -114,14 +85,9 @@
                   Benno Stein and
                   Matthias Hagen and
                   Martin Potthast},
-  editor       = {Hsin{-}Hsi Chen and
-                  Wei{-}Jou (Edward) Duh and
-                  Hen{-}Hsen Huang and
-                  Makoto P. Kato and
-                  Josiane Mothe and
-                  Barbara Poblete},
-  title        = {The Archive Query Log: Mining Millions of Search Result Pages of Hundreds
-                  of Search Engines from 25 Years of Web Archives},
+  editor       = {Hsin{-}Hsi Chen et al.},
+  title        = {The {A}rchive {Q}uery {L}og: {M}ining {M}illions of {S}earch {R}esult {P}ages of {H}undreds
+                  of {S}earch {E}ngines from 25 {Y}ears of {W}eb {A}rchives},
   booktitle    = {Proceedings of the 46th International {ACM} {SIGIR} Conference on
                   Research and Development in Information Retrieval, {SIGIR} 2023, Taipei,
                   Taiwan, July 23-27, 2023},
@@ -169,13 +135,9 @@
                   Linjun Yang and
                   Mao Yang and
                   Ce Zhang},
-  editor       = {Tat{-}Seng Chua and
-                  Chong{-}Wah Ngo and
-                  Roy Ka{-}Wei Lee and
-                  Ravi Kumar and
-                  Hady W. Lauw},
-  title        = {{MS} {MARCO} Web Search: {A} Large-scale Information-rich Web Dataset
-                  with Millions of Real Click Labels},
+  editor       = {Tat{-}Seng Chua et al.},
+  title        = {{MS} {MARCO} {W}eb {S}earch: {A} {L}arge-scale {I}nformation-rich {W}eb {D}ataset
+                  with {M}illions of {R}eal {C}lick {L}abels},
   booktitle    = {Companion Proceedings of the {ACM} on Web Conference 2024, {WWW} 2024,
                   Singapore, Singapore, May 13-17, 2024},
   pages        = {292--301},
@@ -189,8 +151,8 @@
 
 @article{cooper:2008,
   author       = {Alissa Cooper},
-  title        = {A survey of query log privacy-enhancing techniques from a policy perspective},
-  journal      = {{ACM} Trans. Web},
+  title        = {{A} {S}urvey of {Q}uery {L}og {P}rivacy-enhancing {T}echniques from a {P}olicy {P}erspective},
+  journal      = {{ACM} Transactions on the Web},
   volume       = {2},
   number       = {4},
   pages        = {19:1--19:27},
@@ -203,8 +165,8 @@
   author       = {Maristella Agosti and
                   Franco Crivellari and
                   Giorgio Maria Di Nunzio},
-  title        = {Web log analysis: a review of a decade of studies about information
-                  acquisition, inspection and interpretation of user interaction},
+  title        = {Web {L}og {A}nalysis: {A} {R}eview of a {D}ecade of {S}tudies about {I}nformation
+                  {A}cquisition, {I}nspection and {I}nterpretation of {U}ser {I}nteraction},
   journal      = {Data Mining and Knowledge Discovery},
   volume       = {24},
   number       = {3},
@@ -219,7 +181,7 @@
                   Abdur Chowdhury and
                   Cayley Torgeson},
   editor       = {Xiaohua Jia},
-  title        = {A picture of search},
+  title        = {A {P}icture of {S}earch},
   booktitle    = {Proceedings of the 1st International Conference on Scalable Information
                   Systems, Infoscale 2006, Hong Kong, May 30-June 1, 2006},
   series       = {{ACM} International Conference Proceeding Series},
@@ -232,77 +194,76 @@
 }
 
 @article{panaretos:2019,
-   author = "Victor M. Panaretos and
-    Yoav Zemel",
-   title = "Statistical Aspects of Wasserstein Distances", 
-   journal= "Annual Review of Statistics and Its Application",
-   year = "2019",
-   volume = "6",
-   number = "Volume 6, 2019",
-   pages = "405-431",
-   doi = "https://doi.org/10.1146/annurev-statistics-030718-104938",
-   url = "https://www.annualreviews.org/content/journals/10.1146/annurev-statistics-030718-104938",
-   publisher = "Annual Reviews",
-   issn = "2326-831X",
-   type = "Journal Article",
+   author = {Victor M. Panaretos and
+    Yoav Zemel},
+   title = {{S}tatistical {A}spects of {W}asserstein {D}istances}, 
+   journal= {Annual Review of Statistics and Its Application},
+   year = {2019},
+   volume = {6},
+   number = {Volume 6, 2019},
+   pages = {405-431},
+   doi = {https://doi.org/10.1146/annurev-statistics-030718-104938},
+   url = {https://www.annualreviews.org/content/journals/10.1146/annurev-statistics-030718-104938},
+   publisher = {Annual Reviews},
   }
 
-@article{craswell:2020,
-title={ORCAS: 18 Million Clicked Query-Document Pairs for Analyzing Search},
-author={Craswell, Nick and Campos, Daniel and Mitra, Bhaskar and Yilmaz, Emine and Billerbeck, Bodo},
-journal={arXiv preprint arXiv:2006.05324},
-year={2020}
+
+@inproceedings{craswell:2020,
+author = {Craswell, Nick and Campos, Daniel and Mitra, Bhaskar and Yilmaz, Emine and Billerbeck, Bodo},
+title = {{ORCAS}: 18 {M}illion {C}licked {Q}uery-{D}ocument {P}airs for {A}nalyzing {S}earch},
+year = {2020},
+publisher = {Association for Computing Machinery},
+url = {https://doi.org/10.1145/3340531.3412779},
+doi = {10.1145/3340531.3412779},
+booktitle = {Proceedings of the 29th ACM International Conference on Information \& Knowledge Management},
+pages = {2983–2989},
+numpages = {7},
+series = {CIKM '20}
 }
 
-@article{overwijk:2022,
-  title={Clueweb22: 10 billion web documents with visual and semantic information},
-  author={Overwijk, Arnold and Xiong, Chenyan and Liu, Xiao and VandenBerg, Cameron and Callan, Jamie},
-  journal={arXiv preprint arXiv:2211.15848},
-  year={2022}
+
+@inproceedings{overwijk:2022,
+author = {Overwijk, Arnold and Xiong, Chenyan and Callan, Jamie},
+title = {{C}lue{W}eb22: 10 {B}illion {W}eb {D}ocuments with {R}ich {I}nformation},
+year = {2022},
+publisher = {Association for Computing Machinery},
+url = {https://doi.org/10.1145/3477495.3536321},
+doi = {10.1145/3477495.3536321},
+booktitle = {Proceedings of the 45th International ACM SIGIR Conference on Research and Development in Information Retrieval},
+pages = {3360–3362},
+numpages = {3},
+series = {SIGIR '22}
 }
 
-@misc{macavaney:2022,
-      title={Reproducing Personalised Session Search over the AOL Query Log}, 
-      author={Sean MacAvaney and Craig Macdonald and Iadh Ounis},
-      year={2022},
-      eprint={2201.08622},
-      archivePrefix={arXiv},
-      primaryClass={cs.IR},
-      url={https://arxiv.org/abs/2201.08622}, 
-}
 
-@inproceedings{cormack:2009,
-  author       = {Gordon V. Cormack and
-                  Charles L. A. Clarke and
-                  Stefan B{\"{u}}ttcher},
-  editor       = {James Allan and
-                  Javed A. Aslam and
-                  Mark Sanderson and
-                  ChengXiang Zhai and
-                  Justin Zobel},
-  title        = {Reciprocal rank fusion outperforms condorcet and individual rank learning
-                  methods},
-  booktitle    = {Proceedings of the 32nd Annual International {ACM} {SIGIR} Conference
-                  on Research and Development in Information Retrieval, {SIGIR} 2009,
-                  Boston, MA, USA, July 19-23, 2009},
-  pages        = {758--759},
-  publisher    = {{ACM}},
-  year         = {2009},
-  url          = {https://doi.org/10.1145/1571941.1572114},
-  doi          = {10.1145/1571941.1572114},
+@inproceedings{macavaney:2022,
+  author       = {Sean MacAvaney and
+                  Craig Macdonald and
+                  Iadh Ounis},
+  editor       = {Matthias Hagen et al.},
+  title        = {{R}eproducing {P}ersonalised {S}ession {S}earch {O}ver the {AOL} {Q}uery {L}og},
+  booktitle    = {Advances in Information Retrieval - 44th European Conference on {IR}
+                  Research, {ECIR} 2022, Stavanger, Norway, April 10-14, 2022, Proceedings,
+                  Part {I}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {13185},
+  pages        = {627--640},
+  publisher    = {Springer},
+  year         = {2022},
+  url          = {https://doi.org/10.1007/978-3-030-99736-6\_42},
+  doi          = {10.1007/978-3-030-99736-6\_42},
 }
 
 
 @article{spink:2001,
 author = {Spink, Amanda and Wolfram, Dietmar and Jansen, Major B. J. and Saracevic, Tefko},
-title = {Searching the web: The public and their queries},
+title = {Searching the {W}eb: {T}he {P}ublic and their {Q}ueries},
 journal = {Journal of the American Society for Information Science and Technology},
 volume = {52},
 number = {3},
 pages = {226-234},
 doi = {https://doi.org/10.1002/1097-4571(2000)9999:9999<::AID-ASI1591>3.0.CO;2-R},
 url = {https://asistdl.onlinelibrary.wiley.com/doi/abs/10.1002/1097-4571%282000%299999%3A9999%3C%3A%3AAID-ASI1591%3E3.0.CO%3B2-R},
-eprint = {https://asistdl.onlinelibrary.wiley.com/doi/pdf/10.1002/1097-4571%282000%299999%3A9999%3C%3A%3AAID-ASI1591%3E3.0.CO%3B2-R},
 year = {2001}
 }
 
@@ -311,7 +272,7 @@ year = {2001}
                   Monika Henzinger and
                   Hannes Marais and
                   Michael Moricz},
-  title        = {Analysis of a Very Large Web Search Engine Query Log},
+  title        = {{A}nalysis of a {V}ery {L}arge {W}eb {S}earch {E}ngine {Q}uery {L}og},
   journal      = {{SIGIR} Forum},
   volume       = {33},
   number       = {1},
@@ -327,7 +288,7 @@ year = {2001}
                   Amanda Spink and
                   Bernard J. Jansen and
                   Tefko Saracevic},
-  title        = {Vox populi: The public searching of the web},
+  title        = {Vox {P}opuli: {T}he {P}ublic {S}earching of the {W}eb},
   journal      = {Journal of the Association for Information Science and Technology},
   volume       = {52},
   number       = {12},
@@ -343,8 +304,8 @@ year = {2001}
   author       = {Bernard J. Jansen and
                   Amanda Spink and
                   Tefko Saracevic},
-  title        = {Real life, real users, and real needs: a study and analysis of user
-                  queries on the web},
+  title        = {{R}eal {L}ife, {R}eal {U}sers, and {R}eal {N}eeds: {A} {S}tudy and {A}nalysis of {U}ser
+                  {Q}ueries on the {W}eb},
   journal      = {Information Processing and Management},
   volume       = {36},
   number       = {2},
@@ -354,9 +315,10 @@ year = {2001}
   doi          = {10.1016/S0306-4573(99)00056-4},
 }
 
+
 @article{broder:2002,
   author       = {Andrei Z. Broder},
-  title        = {A taxonomy of web search},
+  title        = {A {T}axonomy of {W}eb {S}earch},
   journal      = {{SIGIR} Forum},
   volume       = {36},
   number       = {2},
@@ -370,13 +332,8 @@ year = {2001}
   author       = {Daria Alexander and
                   Wojciech Kusa and
                   Arjen P. de Vries},
-  editor       = {Enrique Amig{\'{o}} and
-                  Pablo Castells and
-                  Julio Gonzalo and
-                  Ben Carterette and
-                  J. Shane Culpepper and
-                  Gabriella Kazai},
-  title        = {{ORCAS-I:} Queries Annotated with Intent using Weak Supervision},
+  editor       = {Enrique Amig{\'{o}} et al.},
+  title        = {{ORCAS-I:} {Q}ueries {A}nnotated with {I}ntent using {W}eak {S}upervision},
   booktitle    = {{SIGIR} '22: The 45th International {ACM} {SIGIR} Conference on Research
                   and Development in Information Retrieval, Madrid, Spain, July 11 -
                   15, 2022},
@@ -390,12 +347,8 @@ year = {2001}
 @inproceedings{kang:2003,
   author       = {In{-}Ho Kang and
                   Gil{-}Chang Kim},
-  editor       = {Charles L. A. Clarke and
-                  Gordon V. Cormack and
-                  Jamie Callan and
-                  David Hawking and
-                  Alan F. Smeaton},
-  title        = {Query type classification for web document retrieval},
+  editor       = {Charles L. A. Clarke et al.},
+  title        = {{Q}uery {T}ype {C}lassification for {W}eb {D}ocument {R}etrieval},
   booktitle    = {{SIGIR} 2003: Proceedings of the 26th Annual International {ACM} {SIGIR}
                   Conference on Research and Development in Information Retrieval, July
                   28 - August 1, 2003, Toronto, Canada},
@@ -415,13 +368,9 @@ year = {2001}
                   David D. Lewis and
                   Abdur Chowdhury and
                   Aleksander Kolcz},
-  editor       = {Ricardo A. Baeza{-}Yates and
-                  Nivio Ziviani and
-                  Gary Marchionini and
-                  Alistair Moffat and
-                  John Tait},
-  title        = {Automatic web query classification using labeled and unlabeled training
-                  data},
+  editor       = {Ricardo A. Baeza{-}Yates et al.},
+  title        = {Automatic {W}eb {Q}uery {C}lassification using {L}abeled and {U}nlabeled {T}raining
+                  {D}ata},
   booktitle    = {{SIGIR} 2005: Proceedings of the 28th Annual International {ACM} {SIGIR}
                   Conference on Research and Development in Information Retrieval, Salvador,
                   Brazil, August 15-19, 2005},
@@ -438,9 +387,9 @@ year = {2001}
                   David D. Lewis and
                   Abdur Chowdhury and
                   Ophir Frieder},
-  title        = {Automatic classification of Web queries using very large unlabeled
-                  query logs},
-  journal      = {{ACM} Trans. Inf. Syst.},
+  title        = {Automatic {C}lassification of {W}eb {q}ueries using {V}ery {L}arge {U}nlabeled
+                  {Q}uery {L}ogs},
+  journal      = {{ACM} Transactions on Information Systems},
   volume       = {25},
   number       = {2},
   pages        = {9},
@@ -456,12 +405,8 @@ year = {2001}
                   Gu Xu and
                   Xueqi Cheng and
                   Hang Li},
-  editor       = {James Allan and
-                  Javed A. Aslam and
-                  Mark Sanderson and
-                  ChengXiang Zhai and
-                  Justin Zobel},
-  title        = {Named entity recognition in query},
+  editor       = {James Allan et al.},
+  title        = {Named {E}ntity {R}ecognition in {Q}uery},
   booktitle    = {Proceedings of the 32nd Annual International {ACM} {SIGIR} Conference
                   on Research and Development in Information Retrieval, {SIGIR} 2009,
                   Boston, MA, USA, July 19-23, 2009},
@@ -481,15 +426,8 @@ year = {2001}
                   Sihong Xie and
                   Yi Chang and
                   Philip S. Yu},
-  editor       = {James Bailey and
-                  Alistair Moffat and
-                  Charu C. Aggarwal and
-                  Maarten de Rijke and
-                  Ravi Kumar and
-                  Vanessa Murdock and
-                  Timos K. Sellis and
-                  Jeffrey Xu Yu},
-  title        = {Learning Entity Types from Query Logs via Graph-Based Modeling},
+  editor       = {James Bailey et al.},
+  title        = {Learning {E}ntity {T}ypes from {Q}uery {L}ogs via {G}raph-{B}ased {M}odeling},
   booktitle    = {Proceedings of the 24th {ACM} International Conference on Information
                   and Knowledge Management, {CIKM} 2015, Melbourne, VIC, Australia,
                   October 19 - 23, 2015},
@@ -506,12 +444,8 @@ year = {2001}
                   Michael Gamon and
                   Anitha Kannan and
                   Ariel Fuxman},
-  editor       = {Alain Mille and
-                  Fabien Gandon and
-                  Jacques Misselis and
-                  Michael Rabinovich and
-                  Steffen Staab},
-  title        = {Active objects: actions for entity-centric search},
+  editor       = {Alain Mille et al.},
+  title        = {Active {O}bjects: {A}ctions for {E}ntity-{C}entric {S}earch},
   booktitle    = {Proceedings of the 21st World Wide Web Conference 2012, {WWW} 2012,
                   Lyon, France, April 16-20, 2012},
   pages        = {589--598},
@@ -524,11 +458,8 @@ year = {2001}
 @inproceedings{rose:2004,
   author       = {Daniel E. Rose and
                   Danny Levinson},
-  editor       = {Stuart I. Feldman and
-                  Mike Uretsky and
-                  Marc Najork and
-                  Craig E. Wills},
-  title        = {Understanding user goals in web search},
+  editor       = {Stuart I. Feldman et al.},
+  title        = {Understanding {U}ser {G}oals in {W}eb {S}earch},
   booktitle    = {Proceedings of the 13th international conference on World Wide Web,
                   {WWW} 2004, New York, NY, USA, May 17-20, 2004},
   pages        = {13--19},
@@ -543,7 +474,7 @@ year = {2001}
                   Aixin Sun and
                   Jianglei Han and
                   Chenliang Li},
-  title        = {A Survey on Deep Learning for Named Entity Recognition},
+  title        = {A {S}urvey on {D}eep {L}earning for {N}amed {E}ntity {R}ecognition},
   journal      = {{IEEE} Transactions On Knowledge Data Engineering},
   volume       = {34},
   number       = {1},
@@ -555,12 +486,8 @@ year = {2001}
 
 @inproceedings{shokouhi:2011,
   author       = {Milad Shokouhi},
-  editor       = {Wei{-}Ying Ma and
-                  Jian{-}Yun Nie and
-                  Ricardo Baeza{-}Yates and
-                  Tat{-}Seng Chua and
-                  W. Bruce Croft},
-  title        = {Detecting Seasonal Queries by Time-Series Analysis},
+  editor       = {Wei{-}Ying Ma et al.},
+  title        = {Detecting {S}easonal {Q}ueries by {T}ime-{S}eries {A}nalysis},
   booktitle    = {Proceeding of the 34th International {ACM} {SIGIR} Conference on Research
                   and Development in Information Retrieval, {SIGIR} 2011, Beijing, China,
                   July 25-29, 2011},
@@ -576,7 +503,7 @@ year = {2001}
                   Nicole Immorlica},
   editor       = {Allan Ellis and
                   Tatsuya Hagino},
-  title        = {Semantic Similarity between Search Engine Queries using Temporal Correlation},
+  title        = {Semantic {S}imilarity between {S}earch {E}ngine {Q}ueries using {T}emporal {C}orrelation},
   booktitle    = {Proceedings of the 14th international conference on World Wide Web,
                   {WWW} 2005, Chiba, Japan, May 10-14, 2005},
   pages        = {2--11},
@@ -593,41 +520,12 @@ year = {2001}
                   Jorge Marx G{\'{o}}mez and
                   Jan Schoenmakers and
                   Sergej Zerr},
-  editor       = {Irena Koprinska and
-                  Michael Kamp and
-                  Annalisa Appice and
-                  Corrado Loglisci and
-                  Luiza Antonie and
-                  Albrecht Zimmermann and
-                  Riccardo Guidotti and
-                  {\"{O}}zlem {\"{O}}zg{\"{o}}bek and
-                  Rita P. Ribeiro and
-                  Ricard Gavald{\`{a}} and
-                  Jo{\~{a}}o Gama and
-                  Linara Adilova and
-                  Yamuna Krishnamurthy and
-                  Pedro M. Ferreira and
-                  Donato Malerba and
-                  Ib{\'{e}}ria Medeiros and
-                  Michelangelo Ceci and
-                  Giuseppe Manco and
-                  Elio Masciari and
-                  Zbigniew W. Ras and
-                  Peter Christen and
-                  Eirini Ntoutsi and
-                  Erich Schubert and
-                  Arthur Zimek and
-                  Anna Monreale and
-                  Przemyslaw Biecek and
-                  Salvatore Rinzivillo and
-                  Benjamin Kille and
-                  Andreas Lommatzsch and
-                  Jon Atle Gulla},
-  title        = {Experimental Evaluation of Scale, and Patterns of Systematic Inconsistencies
-                  in Google Trends Data},
+  editor       = {Irena Koprinska et al.},
+  title        = {Experimental {E}valuation of {S}cale, and {P}atterns of {S}ystematic {I}nconsistencies
+                  in {G}oogle {T}rends {D}ata},
   booktitle    = {{ECML} {PKDD} 2020 Workshops - Workshops of the European Conference
-                  on Machine Learning and Knowledge Discovery in Databases {(ECML} {PKDD}
-                  2020): SoGood 2020, {PDFL} 2020, {MLCS} 2020, {NFMCP} 2020, {DINA}
+                  on Machine Learning and Knowledge Discovery in Databases {ECML} {PKDD}
+                  2020: SoGood 2020, {PDFL} 2020, {MLCS} 2020, {NFMCP} 2020, {DINA}
                   2020, {EDML} 2020, {XKDD} 2020 and {INRA} 2020, Ghent, Belgium, September
                   14-18, 2020, Proceedings},
   series       = {Communications in Computer and Information Science},
@@ -644,30 +542,131 @@ year = {2001}
                   Jing Liu and
                   Ruiyang Ren and
                   Ji{-}Rong Wen},
-  title        = {Dense Text Retrieval based on Pretrained Language Models: {A} Survey},
-  journal      = {CoRR},
-  volume       = {abs/2211.14876},
-  year         = {2022},
-  url          = {https://doi.org/10.48550/arXiv.2211.14876},
-  doi          = {10.48550/ARXIV.2211.14876},
-  eprinttype    = {arXiv},
-  eprint       = {2211.14876},
+  title        = {Dense {T}ext {R}etrieval {B}ased on {P}retrained {L}anguage {M}odels: {A} {S}urvey},
+  journal      = {{ACM} Transactions on Information Systems},
+  volume       = {42},
+  number       = {4},
+  pages        = {89:1--89:60},
+  year         = {2024},
+  url          = {https://doi.org/10.1145/3637870},
+  doi          = {10.1145/3637870},
+  timestamp    = {Sun, 19 Jan 2025 15:03:41 +0100},
+  biburl       = {https://dblp.org/rec/journals/tois/ZhaoLRW24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
+
+
+
 @inproceedings{reimers:2019,
-    title = "Sentence-{BERT}: Sentence Embeddings using {S}iamese {BERT}-Networks",
-    author = "Reimers, Nils  and
-      Gurevych, Iryna",
-    editor = "Inui, Kentaro  and
-      Jiang, Jing  and
-      Ng, Vincent  and
-      Wan, Xiaojun",
-    booktitle = "Proceedings of the 2019 Conference on Empirical Methods in Natural Language Processing and the 9th International Joint Conference on Natural Language Processing (EMNLP-IJCNLP)",
-    month = nov,
-    year = "2019",
-    address = "Hong Kong, China",
-    publisher = "Association for Computational Linguistics",
-    url = "https://aclanthology.org/D19-1410/",
-    doi = "10.18653/v1/D19-1410",
-    pages = "3982--3992",
+  author       = {Nils Reimers and
+                  Iryna Gurevych},
+  editor       = {Kentaro Inui et al.},
+  title        = {Sentence-{BERT}: {S}entence {E}mbeddings using {S}iamese {BERT}-{N}etworks},
+  booktitle    = {Proceedings of the 2019 Conference on Empirical Methods in Natural
+                  Language Processing and the 9th International Joint Conference on
+                  Natural Language Processing, {EMNLP-IJCNLP} 2019, Hong Kong, China,
+                  November 3-7, 2019},
+  pages        = {3980--3990},
+  publisher    = {Association for Computational Linguistics},
+  year         = {2019},
+  url          = {https://doi.org/10.18653/v1/D19-1410},
+  doi          = {10.18653/V1/D19-1410},
 }
+
+
+
+
+@inproceedings{white:2015,
+  author       = {Ryen W. White and
+                  Matthew Richardson and
+                  Wen{-}tau Yih},
+  editor       = {Aldo Gangemi et al.},
+  title        = {Questions vs. {Q}ueries in {I}nformational {S}earch {T}asks},
+  booktitle    = {Proceedings of the 24th International Conference on World Wide Web
+                  Companion, {WWW} 2015, Florence, Italy, May 18-22, 2015 - Companion
+                  Volume},
+  pages        = {135--136},
+  publisher    = {{ACM}},
+  year         = {2015},
+  url          = {https://doi.org/10.1145/2740908.2742769},
+  doi          = {10.1145/2740908.2742769},
+}
+
+
+
+
+@inproceedings{bondarenko:2020,
+author       = {Alexander Bondarenko and
+                Pavel Braslavski and
+                Michael V{\"{o}}lske and
+                Rami Aly and
+                Maik Fr{\"{o}}be and
+                Alexander Panchenko and
+                Chris Biemann and
+                Benno Stein and
+                Matthias Hagen},
+editor       = {James Caverlee et al.},
+title        = {Comparative {W}eb {S}earch {Q}uestions},
+booktitle    = {{WSDM} '20: The Thirteenth {ACM} International Conference on Web Search
+                and Data Mining, Houston, TX, USA, February 3-7, 2020},
+pages        = {52--60},
+publisher    = {{ACM}},
+year         = {2020},
+url          = {https://doi.org/10.1145/3336191.3371848},
+doi          = {10.1145/3336191.3371848},
+}
+
+
+
+@mastersthesis{reimer:2023a,
+title={Identifying and {A}nswering {H}ealth-{R}elated {Q}uestions},
+author={Jan Heinrich Reimer},
+year={2023},
+month={April},
+school={Martin-Luther University Halle-Wittenberg},
+address={Institut für Informatik, Halle (Saale), Germany},
+url={https://downloads.webis.de/theses/papers/reimer_2023.pdf},
+type = {Master's thesis},
+}
+
+@inproceedings{vaswani:2017,
+  author       = {Ashish Vaswani and
+                  Noam Shazeer and
+                  Niki Parmar and
+                  Jakob Uszkoreit and
+                  Llion Jones and
+                  Aidan N. Gomez and
+                  Lukasz Kaiser and
+                  Illia Polosukhin},
+  editor       = {Isabelle Guyon et al.},
+  title        = {Attention is {A}ll you {N}eed},
+  booktitle    = {Advances in Neural Information Processing Systems 30: Annual Conference
+                  on Neural Information Processing Systems 2017, December 4-9, 2017,
+                  Long Beach, CA, {USA}},
+  pages        = {5998--6008},
+  year         = {2017},
+  url          = {https://proceedings.neurips.cc/paper/2017/hash/3f5ee243547dee91fbd053c1c4a845aa-Abstract.html},
+}
+
+
+
+
+@inproceedings{cormack:2009,
+  author       = {Gordon V. Cormack and
+                  Charles L. A. Clarke and
+                  Stefan B{\"{u}}ttcher},
+  editor       = {James Allan et al.},
+  title        = {Reciprocal {R}ank {F}usion outperforms {C}ondorcet and {I}ndividual {R}ank {L}earning
+                  {M}ethods},
+  booktitle    = {Proceedings of the 32nd Annual International {ACM} {SIGIR} Conference
+                  on Research and Development in Information Retrieval, {SIGIR} 2009,
+                  Boston, MA, USA, July 19-23, 2009},
+  pages        = {758--759},
+  publisher    = {{ACM}},
+  year         = {2009},
+  url          = {https://doi.org/10.1145/1571941.1572114},
+  doi          = {10.1145/1571941.1572114},
+}
+
+
