--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -73,6 +73,8 @@
 % \includecomment{comment}
 \usepackage{lipsum} % for commenting (added 3/4/2025)
 \usepackage{multirow} % for tables (added 3/7/2025)
+\usepackage{multicol} % for multicolumned lists (added 4/6/2025)
+\usepackage{graphicx} % for including pdf-plots (added 4/8/2025)
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 % Commenting (by your supervisor)
